// Code generated by sqlc. DO NOT EDIT.
// versions:
//   sqlc v1.30.0

package db

import (
	"time"

	"github.com/jackc/pgx/v5/pgtype"
)

type Account struct {
	ID         int64              `json:"id"`
	Name       string             `json:"name"`
	CurrencyID int16              `json:"currencyId"`
	Balance    int64              `json:"balance"`
	CreatedAt  time.Time          `json:"createdAt"`
	UpdatedAt  pgtype.Timestamptz `json:"updatedAt"`
}

type Category struct {
	ID                int64              `json:"id"`
	Name              string             `json:"name"`
	TransactionTypeID int16              `json:"transactionTypeId"`
	CreatedAt         time.Time          `json:"createdAt"`
	UpdatedAt         pgtype.Timestamptz `json:"updatedAt"`
}

type Currency struct {
	ID   int16  `json:"id"`
	Code string `json:"code"`
}

type Entry struct {
	ID            int64       `json:"id"`
	Name          string      `json:"name"`
	Note          string      `json:"note"`
	FromAccountID int64       `json:"fromAccountId"`
	ToAccountID   pgtype.Int8 `json:"toAccountId"`
	CategoryID    int64       `json:"categoryId"`
	Amount        int64       `json:"amount"`
	CreatedAt     time.Time   `json:"createdAt"`
}

type TransactionType struct {
	ID   int16  `json:"id"`
	Name string `json:"name"`
}
